@@ -1,3 +1,2 @@
 __version_info__ = ('1', '1', '0')
 __version__ = '.'.join(__version_info__) + '.dev'
-
